--- a/Shooper/Base.lproj/Main.storyboard
+++ b/Shooper/Base.lproj/Main.storyboard
@@ -1,24 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="Shooper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperBG" translatesAutoresizingMaskIntoConstraints="NO" id="ebW-X3-aNG">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="you houly wages" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UgF-Vj-sKM" customClass="CurrencyTextField" customModule="Shooper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="153" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="cgV-lg-vnX"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperIcon" translatesAutoresizingMaskIntoConstraints="NO" id="iHV-gg-n9q">
+                                <rect key="frame" x="157.5" y="58" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="dNe-oB-rkv"/>
+                                    <constraint firstAttribute="width" constant="60" id="w8j-21-Txv"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="ItemPrice" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yKX-YX-crx" customClass="CurrencyTextField" customModule="Shooper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="223" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="6JB-KM-XRg"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UgF-Vj-sKM" secondAttribute="trailing" constant="20" id="7ux-En-PpN"/>
+                            <constraint firstItem="yKX-YX-crx" firstAttribute="leading" secondItem="UgF-Vj-sKM" secondAttribute="leading" id="Bbo-48-M9I"/>
+                            <constraint firstItem="iHV-gg-n9q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HOd-rc-6jP"/>
+                            <constraint firstItem="ebW-X3-aNG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="HnB-32-KeF"/>
+                            <constraint firstItem="UgF-Vj-sKM" firstAttribute="top" secondItem="iHV-gg-n9q" secondAttribute="bottom" constant="35" id="Kxf-Ea-tCF"/>
+                            <constraint firstItem="yKX-YX-crx" firstAttribute="trailing" secondItem="UgF-Vj-sKM" secondAttribute="trailing" id="NrZ-UM-Vjz"/>
+                            <constraint firstItem="ebW-X3-aNG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b7C-1w-Ymz"/>
+                            <constraint firstItem="UgF-Vj-sKM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eig-kI-uev"/>
+                            <constraint firstItem="iHV-gg-n9q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="38" id="hay-zY-qVn"/>
+                            <constraint firstItem="ebW-X3-aNG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kiW-88-p4S"/>
+                            <constraint firstItem="ebW-X3-aNG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="n3o-7Z-8o9"/>
+                            <constraint firstItem="yKX-YX-crx" firstAttribute="height" secondItem="UgF-Vj-sKM" secondAttribute="height" id="wBw-l6-jMC"/>
+                            <constraint firstItem="yKX-YX-crx" firstAttribute="top" secondItem="UgF-Vj-sKM" secondAttribute="bottom" constant="30" id="x2z-Jw-D1d"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="priceText" destination="yKX-YX-crx" id="87q-82-MnE"/>
+                        <outlet property="wageTxt" destination="yKX-YX-crx" id="iis-nv-dzY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="windowShopperBG" width="414" height="736"/>
+        <image name="windowShopperIcon" width="115" height="115"/>
+    </resources>
 </document>
